# nsproxy

./: .gitignore  CMakeLists.txt  README.md  Readme.md  conanfile.txt  config.json
proto/: matrix_service.proto
proxy_server/: matrix_operations.cpp  matrix_operations.h  matrix_server.cpp  matrix_service.cpp  matrix_service.h  object_manager.cpp  object_manager.h  proxy_server.cpp
proxy_server/include/: matrix_obj.h  matrix_operations.h  matrix_store.h  object_manager.h
proxy_server/src/: matrix_obj.cpp  matrix_operations.cpp  matrix_service.cpp  object_manager.cpp  proxy_server.cpp
python_client/: nextproxy.py
